style.css
/* ... */
@media only screen and (max-width: 768px) {
  .date-time-social {
    padding: 1rem;
  }

  main,
  .top-topics {
    padding: 1rem;
  }

  .story-content figure {
    width: 75%;
  }

  .story-content .gallery {
    flex-direction: column;
  }

  .story-content .gallery .thumbnail-img {
    width: 100%;
  }

  #carouselFeaturedImg {
    width: 100%;
    height: auto;
  }

  article {
    flex-wrap: wrap;
    height: 600px;
  }

  article > div {
    height: 300px;
    width: 100%;
    padding: 1rem;
  }

  .sign-up {
    display: flex;
    flex-direction: column;
    width: 100%;
  }

  #cludo-search-results .cludo-c-3,
  .cludo-search-results .cludo-c-3 {
    display: none;
  }

  #cludo-search-results .cludo-c-9,
  .cludo-search-results .cludo-c-9 {
    -webkit-box-flex: 0;
    flex: 0 0 100% !important;
    max-width: 100% !important;
  }
}

@media only screen and (max-width: 490px) {
  .date-time-social {
    flex-wrap: wrap;
    padding-bottom: 0;
  }

  .date-time-social div {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    margin-bottom: 0.5rem;
  }

  nav a {
    padding: 0 0.5rem;
  }

  .mobile-buttons button {
    margin-right: 0.5rem;
  }

  .story {
    padding: 1rem;
  }

  .story-content figure {
    width: 100%;
  }
}

